@@ -9,6 +9,7 @@ Bug fixes:
 - Improved CMFInstaller docstrings.
 - Type names or meta types to add to a cache in portal_trees were added again
   even if they were already present in the list.
+- verifyDirectories restore RamCache association.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
